2003-10-24  Dan Winship  <danw@ximian.com>

	* Makefile.am (libedb3util_la_LIBADD): add $(DB3_LDADD)

2003-10-22  Dan Winship  <danw@ximian.com>

	* e-bonobo-factory-util.[ch]: Gone; unused since 1.2

	* e-proxy.[ch]: Gone; nothing in evo uses soup any more.

	* Makefile.am (eutilinclude_HEADERS, libeutil_la_SOURCES): Remove
	e-proxy.[ch]

2003-10-20  Ettore Perazzoli  <ettore@ximian.com>

	* Makefile.am (pilot_compile) [! ENABLE_PILOT_CONDUITS]: Add
	md5-utils.c so it compiles even if you have no Pilot support.

2003-10-16  Rodrigo Moya <rodrigo@ximian.com>

	* e-source-list.c (e_source_list_sync): use gconf_client_notify_remove
	instead of g_source_remove for GConf notification IDs.
	(impl_finalize): remove the GConf notification also here.

2003-10-13  Rodrigo Moya <rodrigo@ximian.com>

	* e-source-group.[ch] (e_source_group_peek_source_by_name): added
	new function.

2003-10-10  Not Zed  <NotZed@Ximian.com>

	* e-account-list.c (e_account_list_find): add FIND_UID find type.

2003-09-26  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyaddr_r): IPv6 implementation
	rewritten to use getnameinfo() which is the proper function to use
	in this case. Fixes bug #46006 the Right Way (tm).

2003-09-25  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyaddr_r): Make sure that
	res->ai_canonname is non-NULL and that it doesn't match the
	numeric host address that we were trying to resolve. Fixes the
	second half of bug #46006.

2003-09-19  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyaddr_r): Work around a bug in glibc
	2.3.2's gethostbyaddr_r() implementation.

2003-09-15  Larry Ewing  <lewing@ximian.com>

	* e-source.c (e_source_dump_to_xml_node): make sure declarations
	precede the body.

2003-09-11  Dan Winship  <danw@ximian.com>

	* Makefile.am (noinst_LTLIBRARIES): Remove libeutil-static.la and
	libeconduit-static.la

	* ename/Makefile.am (noinst_LTLIBRARIES): Remove
	libename-static.la
