@@ -1,3 +1,10 @@
+2003-10-17  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* e-host-utils.c (e_gethostbyname_r): If the system defines
+	AI_ADDRCONFIG, set this flag on the hints.ai_flags member as well
+	so that we don't resolve a host to an IPv6 addr when the node
+	doesn't have any IPv6 source addresses.
+
 2003-10-24  Dan Winship  <danw@ximian.com>
 
 	* Makefile.am (libedb3util_la_LIBADD): add $(DB3_LDADD)
